<resources>
    <string name="app_name">Location Based Profile Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="normal">Normal</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="custom">Custom Profile 1</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="ring">Ring</string>
    <string name="message">Message</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
