<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgmedia"
            android:layout_width="30dp"
            android:layout_height="30sp"
            android:src="@drawable/media"
            android:layout_above="@+id/seekbarMedia"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtmedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgmedia"
            android:text="@string/media"
            android:textSize="25sp"
            android:fontFamily="serif"
            android:padding="16dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtmedia"
            android:layout_toEndOf="@+id/imgmedia"
            android:id="@+id/seekbarMedia"
            android:padding="8dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgalarm"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/alarm"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtalarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgalarm"
            android:layout_toRightOf="@+id/imgalarm"
            android:fontFamily="serif"
            android:text="@string/alarm"
            android:textSize="25sp"
            android:padding="16dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SeekBar
            android:id="@+id/seekbarAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtalarm"
            android:layout_toEndOf="@+id/imgalarm"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:id="@+id/imgnotification"
            android:src="@drawable/notification"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/notification"
            android:id="@+id/txtnotification"
            android:layout_toRightOf="@+id/imgnotification"
            android:layout_toEndOf="@+id/imgnotification"
            android:fontFamily="serif"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtnotification"
            android:layout_toEndOf="@+id/imgnotification"
            android:id="@+id/seekBarNotification"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:id="@+id/imgring"
            android:src="@drawable/ring"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgring"
            android:layout_toRightOf="@+id/imgring"
            android:fontFamily="serif"
            android:padding="16dp"
            android:text="@string/ring"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtring"
            android:id="@+id/seekBarRing"
            android:layout_toEndOf="@+id/imgring"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:id="@+id/imgmessage"
            android:src="@drawable/sms"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/txtmessage"
            android:text="@string/message"
            android:layout_toRightOf="@+id/imgmessage"
            android:layout_toEndOf="@+id/imgmessage"
            android:fontFamily="serif"
            android:padding="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtmessage"
            android:id="@+id/seekBarMessage"
            android:layout_toEndOf="@+id/imgmessage"
            android:fontFamily="serif"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneringtone"
            android:textSize="25sp"
            android:padding="16dp"
            android:fontFamily="serif"
            android:text="Phone Ringtone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageringtone"
            android:textSize="25sp"
            android:padding="16dp"
            android:fontFamily="serif"
            android:text="Message Ringtone"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notificationringtone"
            android:textSize="25sp"
            android:padding="16dp"
            android:fontFamily="serif"
            android:text="Notification Ringtone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/changeWallpaper"
            android:textSize="25sp"
            android:padding="16dp"
            android:fontFamily="serif"
            android:text="Change Wallpaper"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:id="@+id/vibratecalls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="16dp"
                android:text="Vibrate for Calls"
                android:textSize="25sp"
                 />

            <Switch
                android:id="@+id/switchvibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DialPad Tones"
                android:fontFamily="serif"
                android:id="@+id/dialpadtones"
                android:textSize="25sp"
                android:padding="16dp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dailpadTones"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Touch Sound"
                android:padding="16dp"
                android:id="@+id/touchSound"
                android:fontFamily="serif"
                android:textSize="25sp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchtouch"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wifi"
                android:fontFamily="serif"
                android:id="@+id/wifi"
                android:padding="16dp"
                android:textSize="25sp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchwifi"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bluetooth"
                android:padding="16dp"
                android:fontFamily="serif"
                android:id="@+id/bluetooth"
                android:textSize="25sp"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/switchbluetooth"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>


    </LinearLayout>



</LinearLayout>

    </ScrollView>

</RelativeLayout>